--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+        "knplabs/knp-time-bundle": "^2.2",
         "liip/imagine-bundle": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
@@ -45,6 +46,7 @@
         "symfonycasts/verify-email-bundle": "^1.14",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.7",
+        "twig/string-extra": "^3.7",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.2"
     },
